==> ksoloti/ksoloti/chibios/os/hal/ports/ADUCM/ADUCM36x/hal_serial_lld.c <==
#include "hal.h"
#define ADUCM_COMFBR_ENABLE                 COMFBR_ENABLE_EN
#define ADUCM_COMFBR_DIVM(m)                ((m) << 11U)
#define ADUCM_COMFBR_DIVN(n)                ((n) << 0U)

static void set_error(SerialDriver *sdp, uint32_t lsr) {
  eventflags_t sts = 0;

  if (lsr & COMLSR_OE)
    sts |= SD_OVERRUN_ERROR;
  if (lsr & COMLSR_PE)
    sts |= SD_PARITY_ERROR;
  if (lsr & COMLSR_FE)
    sts |= SD_FRAMING_ERROR;
  osalSysLockFromISR();
  chnAddFlagsI(sdp, sts);
  osalSysUnlockFromISR();
}

void sd_lld_init(void) {

#if ADUCM_SERIAL_USE_UART0 == TRUE
  sdObjectInit(&SD0);
  iqObjectInit(&SD0.iqueue, sd_in_buf0, sizeof sd_in_buf0, NULL, &SD0);
  oqObjectInit(&SD0.oqueue, sd_out_buf0, sizeof sd_out_buf0, notify0, &SD0);
  SD0.uart = pADI_UART;
  SD0.clock = ADUCM_UARTCLK;

  nvicEnableVector(ADUCM_UART0_NUMBER, ADUCM_SERIAL_UART0_PRIORITY); 
#endif
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config) {

  if (config == NULL) {
    config = &default_config;
  }

  if (sdp->state == SD_STOP) {
#if ADUCM_SERIAL_USE_UART0 == TRUE
    if (&SD0 == sdp) {
      ccEnableUART0();
    }
#endif
  }
  uart_init(sdp, config);
}

void sd_lld_stop(SerialDriver *sdp) {

  if (sdp->state == SD_READY) {
    /* UART is de-initialized then clocks are disabled.*/
    uart_deinit(sdp);

#if ADUCM_SERIAL_USE_UART0 == TRUE
    if (&SD0 == sdp) {
      ccDisableUART0();
      return;
    }
#endif
  }
}

void sd_lld_serve_interrupt(SerialDriver *sdp) {
  uint32_t irr = sdp->uart->COMIIR;
  uint32_t ien = sdp->uart->COMIEN;
  
  if(!(irr & COMIIR_NINT_MSK)) {
    if(irr == COMIIR_STA_MODEMSTATUS) {
      volatile uint32_t msr;

      /* Clearing the interrupt. */
      msr = sdp->uart->COMMSR;

     (void) msr;
    }
    
    /* Data available, note it is a while in order to handle two situations:
       1) Another byte arrived after removing the previous one, this would cause
          an extra interrupt to serve.
       2) FIFO mode is enabled on devices that support it, we need to empty
          the FIFO.*/
    while (irr & COMIIR_STA_RXBUFFULL) {
      osalSysLockFromISR();
      sdIncomingDataI(sdp, (uint8_t)sdp->uart->COMRX);
      osalSysUnlockFromISR();

      irr = sdp->uart->COMIIR;
    }

    /* Transmission buffer empty, note it is a while in order to handle two
       situations:
       1) The data registers has been emptied immediately after writing it, this
          would cause an extra interrupt to serve.
       2) FIFO mode is enabled on devices that support it, we need to fill
          the FIFO.*/
    if (ien & COMIEN_ETBEI) {
      while (irr & COMIIR_STA_TXBUFEMPTY) {
        msg_t b;

        osalSysLockFromISR();
        b = oqGetI(&sdp->oqueue);
        if (b < MSG_OK) {
          chnAddFlagsI(sdp, CHN_OUTPUT_EMPTY);
          sdp->uart->COMIEN = ien & ~COMIEN_ETBEI;
          osalSysUnlockFromISR();
          break;
        }
        sdp->uart->COMTX = b;
        osalSysUnlockFromISR();
  
        irr = sdp->uart->COMIIR;
      }
    }
    
    if(irr == COMIIR_STA_RXLINESTATUS) {
      uint32_t lsr;

      /* Clearing the interrupt. */
      lsr = sdp->uart->COMLSR;

      /* Error handling. */
      if(lsr & 0x0EU) {
        set_error(sdp, lsr);
      }

      /* Error handling. */
      if(lsr & COMLSR_TEMT) {
        set_error(sdp, lsr);
      }

      /* Physical transmission end.*/
      if (lsr & COMLSR_TEMT) {
        osalSysLockFromISR();
        if (oqIsEmptyI(&sdp->oqueue)) {
          chnAddFlagsI(sdp, CHN_TRANSMISSION_END);
        }
        osalSysUnlockFromISR();
      }
    }
  } 
}
